--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -19,7 +19,9 @@
       </ul>
     </div>
     <div class="content">
-      <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
+      <div class="main-image">
+        <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
+      </div>
       <div class="input">
         <input type="text">
       </div>
